--- a/survey/surveyen/khindex.html
+++ b/survey/surveyen/khindex.html
@@ -13,7 +13,7 @@
   <title>កម្មវិធីផ្សព្វផ្សាយ</title>
   
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/stylei11p.css">
+  <link rel="stylesheet" href="css/stylevoucher.css">
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/jquery.eraser.js"></script>
   <script src="js/main.js"></script>
@@ -238,7 +238,7 @@ Seatel
   <div style="padding-bottom: 20px" class="wrapper prize con-prize1" data-step="3">
     <h2 class="gifts__title" style="margin-top: 20px;text-align: center">ជូតស្រទាប់ការពារហើយទទួលរង្វាន់របស់អ្នក!</h2>
     <h2 class="gifts__title hide gifts__title-result" style="margin-top: 20px;text-align: center">សូមអបអរសាទរ!<br>អ្នក ឈ្នះ!</h2>
-    <p class="attempt">Remaining attempts:<span class="attempt__num">3</span></p>
+    <p class="attempt">ការប៉ុនប៉ងដែលនៅសល់:<span class="attempt__num">3</span></p>
     <div class="gifts">
       <div class="gift">
         <div class="gift__inner">
@@ -252,7 +252,7 @@ Seatel
     </div>
     <div class="gifts__result hide">
       <div class="button">
-        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();">Get it now</button>
+        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();">យកវាឥឡូវនេះ</button>
       </div>
     </div>
   </div>
