--- a/survey/surveyen/index4.html
+++ b/survey/surveyen/index4.html
@@ -1127,7 +1127,7 @@
     <footer style="background: #fff">
       <div class="footer-block">
         <img
-          src="images/spinwheel_1.png"
+          src="images/powerball_naijan.png"
           alt=""
           style="max-width: 200px; margin-top: 10px; margin-bottom: 1px"
         />
