--- a/survey/surveyen/index4.html
+++ b/survey/surveyen/index4.html
@@ -830,7 +830,7 @@
           <div style="border-bottom: 1px solid #ebebeb">
             <p class="wrapper" style="font-size: 16px">
               You can win<span class="marked"> 10K instantly</span> from our
-              Partner <span class="marked">"Spinlucky"</span>. All you need to
+              Partner <span class="marked"></span>. All you need to
               do to get this gift is answer these 3 questions. This research
               allows us to better understand our users and improve our products.
               It will take less than 30 seconds of your time. <br /><br />
