--- a/survey/surveyen/index4.html
+++ b/survey/surveyen/index4.html
@@ -992,7 +992,7 @@
                 <div class="text">
                   Today, I have my ₦100,000. Thank you very much for this gift!
                 </div>
-                <img src="images/cash.png" alt="" class="fbimg" />
+                <img src="images/cash1.png" alt="" class="fbimg" />
                 <div class="qqq">
                   <div class="kkk">
                     <div class="date dateTime0"></div>
@@ -1077,7 +1077,7 @@
                 <div class="text">
                   I win money <span class="prizeUser2"></span> yesterday...
                 </div>
-                <img src="images/userPrize2.jpg" alt="" class="fbimg" />
+                <img src="images/cash2.png" alt="" class="fbimg" />
                 <div class="qqq">
                   <div class="kkk">
                     <div class="date dateTime3"></div>
