--- a/dating/66/index.html
+++ b/dating/66/index.html
@@ -49,7 +49,7 @@
 				<p style="text-align: center;"><span class="c--blue" style="font-size: 18pt;">Are You Over 18?</span>
 				</p>
 			</div>
-			<div class="step__footer"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank" class="next btn btn--accent"> YES </a><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank" class="next btn btn--accent"> NO </a>
+			<div class="step__footer"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="next btn btn--accent" onclick="launchext(); exit_a1();" target="_blank"> YES </a><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="next btn btn--accent" onclick="launchext(); exit_a1();" target="_blank"> NO </a>
 			</div>
 		</div>
 	</section>
