--- a/pinbox/e20235231703ncash/idnindex.html
+++ b/pinbox/e20235231703ncash/idnindex.html
@@ -148,8 +148,8 @@
 		}
 		function dialog3() {
 			Swal.fire({
-				imageUrl: 'img/cash.png',
-				html: '<strong>Anda mungkin Pemenang dari:</strong> <h2>100,000 Rp </h2><br><h4>Langkah Selanjutnya:</h4><br>1. Anda akan dialihkan ke situs mitra<br>2. Masukkan nomor ponsel Anda<br>3. Dapatkan hadiahmu',
+				imageUrl: 'img/giftvoucher.jpg',
+				html: '<strong>Anda mungkin Pemenang dari:</strong> <h2>100,000Rp </h2><br><h4>Langkah Selanjutnya:</h4><br>1. Anda akan dialihkan ke situs mitra<br>2. Masukkan nomor ponsel Anda<br>3. Dapatkan hadiahmu',
 				allowOutsideClick: false,
 				showConfirmButton: false,
 				footer: '<a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank">Mengonfirmasi</a>'
@@ -167,7 +167,7 @@
 				$(dialog2()).load();
 			}
 			if (i == 3) {
-				$(this).html('<img src="img/giftvoucher.jpg">');
+				$(this).html('<img src="img/box_o_b.png">');
 				$(dialog3()).load();
 			}
 		});
