--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -131,7 +131,7 @@
                         <div class="comment-status"><span></span>
                             <script type="text/javascript">
                                 document.write(get_date(0));
-                            </script>Uy nghi 9, 2020
+                            </script>
                         </div>
                     </div><!-- ******** COMMENTS END ******** -->
 
@@ -145,7 +145,7 @@
                         <div class="comment-status"><span></span>
                             <script type="text/javascript">
                                 document.write(get_date(0));
-                            </script>Uy nghi 9, 2020
+                            </script>
                         </div>
                     </div><!-- ******** COMMENTS END ******** -->
                     <!-- ******** COMMENTS ******** -->
@@ -158,7 +158,7 @@
                         <div class="comment-status"><span></span>
                             <script type="text/javascript">
                                 document.write(get_date(1));
-                            </script>Uy nghi 8, 2020
+                            </script>
                         </div>
                     </div><!-- ******** COMMENTS END ******** -->
                     <!-- ******** COMMENTS ******** -->
@@ -172,7 +172,7 @@
                         <div class="comment-status"><span></span>
                             <script type="text/javascript">
                                 document.write(get_date(2));
-                            </script>Uy nghi 7, 2020
+                            </script>
                         </div>
                     </div><!-- ******** COMMENTS END ******** -->
                 </strong>
@@ -181,7 +181,7 @@
     </main><strong>
         <div class="sweet-overlay" style="opacity: 1.03; display: block;" tabindex="-1"></div>
         <div class="sweet-alert animated bounceIn visible" id="modal01">
-            <h2 style="margin-top:30px;"> Xin chúc mừng! </h2>
+            <h2 style="margin-top:30px;"> Selamat!</h2>
             <p> Setiap tiga minggu, kami memilih satu pelanggan beruntung dari Vietnam untuk bonus eksklusif
                 Rp.23,000 voucher
             </p>
@@ -212,7 +212,7 @@
                 <div class="sa-fix"></div>
             </div>
             <h2> Selamat!</h2>
-            <p> Bạn đã giành được voucher 23.000 rupiah. Vui lòng làm theo hướng dẫn để nhận tiền thưởng của bạn.
+            <p> Anda telah memenangkan voucher Rp.23,000 . Silakan ikuti petunjuk untuk mengklaim bonus Anda.
             </p>
             <div class="sa-button-container">
                 <div class="sa-confirm-button-container"><button class="ord-btn__btn" style="display: inline-block;box-shadow: rgba(140, 212, 245, 0.8) 0px 0px 2px, rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(232, 66, 66);"><a href="#" style="padding:0px;background-color:#e84242;margin:0;border:0px;"> OK </a></button>
