--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -98,7 +98,7 @@
             <div class="main-content" id="content1">
 
                 <center>
-                    <div class="select">  Kau punya<font color="red"><b><span id="mins">1</span> menit dan <span id="hsecs">22</span> detik </b></font> untuk bermain atau poin Anda akan diberikan
+                    <div class="select">  Kau punya<font color="red"><b><span id="mins">1</span> menit dan <span id="hsecs">7</span> detik </b></font> untuk bermain atau poin Anda akan diberikan
                         lainnya. </div>
                 </center>
                 <center style="padding-top:10px"><strong> Catatan:
@@ -108,7 +108,7 @@
                     <p style="text-align: center;"></p>
                     <p> bình luận </p>
                     <hr>
-                    <p style="color: rgb(168, 167, 167);"><span id="liked" onclick="total_likes();return false" style="color: rgb(168, 167, 167); cursor: pointer;"> Giống như </span> • Trả lời • Thực hiện
+                    <p style="color: rgb(168, 167, 167);"><span id="liked" onclick="total_likes();return false" style="color: rgb(168, 167, 167); cursor: pointer;">  </span> 
                         theo </p>
                     <hr><!-- ******** COMMENTS ******** -->
                     <div class="comments">
@@ -118,7 +118,7 @@
                     <div class="comments">
                         <p style="margin: 0px; padding: 0px; float: left; display: block; width: 50%;"><span style="color: rgb(59, 89, 152);"> Tampilkan semua komentar</span></p>
                         <p style="margin: 0px; padding: 0px; float: right; display: block; width: 50%; color: rgb(168, 167, 167); text-align: right;">
-                            50 ud af 80,312 </p>
+                             </p>
                         <div style="clear: both;"></div>
                     </div><!-- ******** COMMENTS END ******** -->
                     <!-- ******** COMMENTS ******** -->
