--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -106,14 +106,14 @@
                     </strong></center><strong>
                     <div id="spinner"><img id="spinBG" src="images/11.png"><img id="spin" src="images/22.png"><img id="win" onclick="" src="images/33.png"><img class="animated rotateIn" id="iphone" src="images/44.png"></div>
                     <p style="text-align: center;"></p>
-                    <p> bình luận </p>
+                    <p></p>
                     <hr>
                     <p style="color: rgb(168, 167, 167);"><span id="liked" onclick="total_likes();return false" style="color: rgb(168, 167, 167); cursor: pointer;">  </span> 
-                        theo </p>
+                     </p>
                     <hr><!-- ******** COMMENTS ******** -->
                     <div class="comments">
                         <p id="total_likes" style="margin: 0px; padding: 0px;"><span style="color: rgb(59, 89, 152);">
-                                12,068 </span> seperti ini</p>
+                                12,068 </span> suka</p>
                     </div>
                     <div class="comments">
                         <p style="margin: 0px; padding: 0px; float: left; display: block; width: 50%;"><span style="color: rgb(59, 89, 152);"> Tampilkan semua komentar</span></p>
