--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -104,7 +104,7 @@
                 <center style="padding-top:10px"><strong> Catatan:
                         <!--</strong--> Penghargaan ini berlaku untuk waktu yang terbatas, jadi cepatlah! <p></p>
                     </strong></center><strong>
-                    <div id="spinner"><img id="spinBG" src="images/11.png"><img id="spin" src="images/22.png"><img id="win" onclick="" src="images/33.png"><img class="animated rotateIn" id="iphone" src="images/44.png"></div>
+                    <div id="spinner"><img id="spinBG" src="images/11.png"><img id="spin" src="images/22.png"><img id="win" onclick="" src="images/33.png"><img class="animated rotateIn" id="iphone" src="images/giftvoucher.jpg"></div>
                     <p style="text-align: center;"></p>
                     <p></p>
                     <hr>
