--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -151,7 +151,7 @@
                     <!-- ******** COMMENTS ******** -->
                     <div class="comments">
                         <div class="comment-content pic10">
-                            <p class="name"> Halaman Còj</p>
+                            <p class="name"> Halaman </p>
                             <p> Apakah ini nyata, teman-teman?</p>
                         </div>
                         <div class="clr"></div>
