--- a/spin/84/index.html
+++ b/spin/84/index.html
@@ -232,7 +232,7 @@
             <p> Anda telah memenangkan voucher Rp.23,000 . Silakan ikuti petunjuk untuk mengklaim bonus Anda.
             </p>
             <div class="sa-button-container">
-                <div class="sa-confirm-button-container"><button class="ord-btn__btn" style="display: inline-block;box-shadow: rgba(140, 212, 245, 0.8) 0px 0px 2px, rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(232, 66, 66);"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank" style="padding:0px;background-color:#e84242;margin:0;border:0px;"> OK </a></button>
+                <div class="sa-confirm-button-container"><button class="ord-btn__btn" style="display: inline-block;box-shadow:rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(232, 66, 66);"><a href="https://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank" style="padding:0px;background-color:#e84242;margin:0;border:0px;"> OK </a></button>
                     <div class="la-ball-fall"></div>
                 </div>
             </div>
