--- a/survey/surveyen/index.html
+++ b/survey/surveyen/index.html
@@ -52,7 +52,7 @@
       <td>
         <img alt="" src="images/play_logo.png" style="max-width:250px;margin: -8px auto 10px auto; display: block;">
         <p style="font-size: 16px; color: #000; ">
-Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, download and install the Android app; <br>2. Open the app and earn $5000 for trading;<br> 3. Trade and study to make money!
+Your ₦300,000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, download and install the Android app; <br>2. Open the app and earn $5000 for trading;<br> 3. Trade and study to make money!
         </p>
         <br>
       </td>
@@ -116,11 +116,11 @@ Your $5000 bonus is reserved!<br>Conditions to obtain:<br>1. On the next page, d
       </table>
       <div style="border-bottom:1px solid #ebebeb">
         <p class="wrapper" style="font-size: 16px;">
-          You can win<span class="marked"> 10K instantly</span>  from our Partner <span class="marked">"PLAYBOX"</span>. All you need to do to get this gift is answer these 3 questions. This research allows us to better understand our users and improve our products. It will take less than 30 seconds of your time.
+          You can win<span class="marked"> ₦10K instantly</span>  from our Partner <span class="marked">"PLAYBOX"</span>. All you need to do to get this gift is answer these 3 questions. This research allows us to better understand our users and improve our products. It will take less than 30 seconds of your time.
           <br><br>
         </p>
       </div>
-      <div class="wrapper select2" style="font-size: 16px; color: #000;"><b>Remember: </b>Only 100 randomly selected users receive this invitation, the number of gifts is limited.</div>
+      <div class="wrapper select2" style="font-size: 16px; color: #000;"><b>Remember: </b>Only 10 randomly selected users receive this invitation, the number of gifts is limited.</div>
     </div>
   </div>
   <div class="wrapper form_questions" data-step="1" style="position: relative; margin-top: 20px;">
@@ -252,7 +252,7 @@ Others
     </div>
     <div class="gifts__result hide">
       <div class="button">
-        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://blast.radadpro.com/click','_blank'); launchext(); exit_a1();">Get it now</button>
+        <button style="color: #ffffff !important;padding: 6px 20px;background: #002E87;border-radius: 20px" class="button__text btnPrize" onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();">Get it now</button>
       </div>
     </div>
   </div>
@@ -270,9 +270,9 @@ Others
         <td align="left" valign="top" class="commentpad">
           <div class="name">Fan Leriz</div>
           <div class="text">
-            Today, I have my $5000 Bonus. Thank you very much for this gift!
+            Today, I have my ₦35,000 Bonus. Thank you very much for this gift!
           </div>
-          <img src="images/userPrize1.jpg" alt="" class="fbimg">
+          <img src="images/cash1.png" alt="" class="fbimg">
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime0"></div>
@@ -299,7 +299,7 @@ Others
         </td>
         <td align="left" valign="top" class="commentpad">
           <div class="name">Jasmine Yang Cuishan</div>
-          <div class="text">My wife and I have $3000 for negotiation. Thank you.</div>
+          <div class="text">My wife and I have ₦30,000 for negotiation. Thank you.</div>
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime1"></div>
@@ -345,7 +345,7 @@ Others
         <td align="left" valign="top" class="commentpad">
           <div class="name">Erica Chow</div>
           <div class="text">I win money <span class="prizeUser2"></span> yesterday...</div>
-          <img src="images/userPrize2.jpg" alt="" class="fbimg">
+          <img src="images/cash2.png" alt="" class="fbimg">
           <div class="qqq">
             <div class="kkk">
               <div class="date dateTime3"></div>
