--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -12,7 +12,7 @@
     />
     <meta content="width=device-width" name="viewport" />
     <meta content="on" http-equiv="cleartype" />
-    <title>Spinlucky Promotion Program</title>
+    <title>jazzcash Promotion Program</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/stylei11p.css" />
@@ -639,7 +639,7 @@
             <td>
               <img
                 alt=""
-                src="images/spinwheel_logo.png"
+                src="images/jazzcash.png"
                 style="
                   max-width: 250px;
                   margin: -8px auto 10px auto;
@@ -709,10 +709,10 @@
                         line-height: 1.6;
                       "
                     >
-                      Every day, we select a small group of users and give them
-                      the opportunity to receive valuable gifts from our
-                      partners and sponsors. This is our opportunity to thank
-                      you.
+                    ہر روز، ہم صارفین کا ایک چھوٹا سا گروپ منتخب کرتے ہیں اور انہیں دیتے ہیں
+                                                    ہماری طرف سے قیمتی تحائف حاصل کرنے کا موقع
+                                  شراکت داروں اور سپانسرز. یہ شکریہ ادا کرنے کا ہمارا موقع ہے
+                                                                                               .آپ
                     </p>
                   </td>
                 </tr>
@@ -768,16 +768,16 @@
           </table>
           <div style="border-bottom: 1px solid #ebebeb">
             <p class="wrapper" style="font-size: 16px">
-              You can win<span class="marked"> 10K instantly</span> from our
-              Partner <span class="marked">"Spinlucky"</span>. All you need to
-              do to get this gift is answer these 3 questions. This research
-              allows us to better understand our users and improve our products.
-              It will take less than 30 seconds of your time. <br /><br />
+              آپ جیت سکتے ہیں<span class="marked">Rs.100,000</span> ہمارے ساتھی سے
+              <span class="marked">"Jazzcash"</span>.     آپ سب کی ضرورت ہے
+              یہ تحفہ حاصل کرنے کے ل do ان 3 سوالوں کا جواب ہے۔ یہ تحقیق
+              ہمیں اپنے صارفین کو بہتر طور پر سمجھنے اور اپنی مصنوعات کو بہتر بنانے کی اجازت دیتا ہے.
+              .یہ آپ کے وقت کے 30 سیکنڈ سے بھی کم وقت لگے گا<br /><br />
             </p>
           </div>
           <div class="wrapper select2" style="font-size: 16px; color: #000">
-            <b>Remember: </b>Only 100 randomly selected users receive this
-            invitation, the number of gifts is limited.
+            <b>:یاد رکھیں</b>,صرف 10 تصادفی طور پر منتخب صارفین اس دعوت نامہ وصول کرتے ہیں،
+            .تحائف کی تعداد محدود ہے.
           </div>
         </div>
       </div>
@@ -788,47 +788,44 @@
       >
         <div class="question" style="display: block">
           <h3 class="question__title">
-            Question <span class="question__num">1</span> of 3: Which device are
-            you using now?
+            Question <span class="question__num">1</span> of 3: اب آپ کون سا آلہ استعمال کر رہے ہیں؟
           </h3>
           <div class="button answer">
-            <button class="button__text">Personal Computer / Notebook</button>
+            <button class="button__text">ذاتی کمپیوٹر / نوٹ بک</button>
           </div>
           <div class="button answer">
-            <button class="button__text">Cell</button>
+            <button class="button__text">موبائل فون</button>
           </div>
           <div class="button answer">
-            <button class="button__text">A tablet</button>
+            <button class="button__text">ٹیبلٹ پی سی</button>
           </div>
           <div class="button answer">
-            <button class="button__text">Others</button>
+            <button class="button__text">دوسرے</button>
           </div>
         </div>
         <div class="question">
           <h3 class="question__title">
-            Question <span class="question__num">2</span> of 3: Which other
-            internet providers do you regularly use?
+            Question <span class="question__num">2</span> of 3: آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
           </h3>
           <div class="button answer">
-            <button class="button__text">MTN</button>
+            <button class="button__text">JAZZ</button>
           </div>
           <div class="button answer">
-            <button class="button__text">GLO</button>
+            <button class="button__text">Ufone</button>
           </div>
           <div class="button answer">
-            <button class="button__text">AIRTEL</button>
+            <button class="button__text">Telenor</button>
           </div>
           <div class="button answer">
-            <button class="button__text">9Mobile</button>
+            <button class="button__text">Zong</button>
           </div>
           <div class="button answer">
-            <button class="button__text">Others</button>
+            <button class="button__text">دیگر</button>
           </div>
         </div>
         <div class="question">
           <h3 class="question__title">
-            Question <span class="question__num">3</span> of 3: What is your
-            age?
+            Question <span class="question__num">3</span> of 3: آپ کی عمر کیا ہے؟
           </h3>
           <div class="button answer">
             <button class="button__text">18-25</button>
@@ -845,10 +842,10 @@
         <div class="loading">
           <div class="loading__head loading__grid">
             <div class="loading__state loading__part">
-              <p class="loading__action">Checking answers...</p>
-              <p class="loading__action">Checking IP Address...</p>
-              <p class="loading__action">Checking gift availability...</p>
-              <p class="loading__action">Congratulations!</p>
+              <p class="loading__action">...جوابات کی جانچ پڑتال</p>
+              <p class="loading__action">...IP ایڈریس کی جانچ پڑتال</p>
+              <p class="loading__action">...تحفہ کی دستیابی کی جانچ پڑتال</p>
+              <p class="loading__action">مبارک ہو</p>
             </div>
             <div class="loading__perc loading__part">0%</div>
           </div>
@@ -857,10 +854,10 @@
           </div>
           <div class="loading__cover">
             <div class="loading__check" data-status="panding">
-              There has been no repeated request from your IP address
+              آپ کے IP ایڈریس سے بار بار درخواست نہیں ہوئی ہے
             </div>
             <div class="loading__check" data-status="panding">
-              Today you have access to 1 Bonus
+              آج آپ 1 بونس تک رسائی حاصل ہے
             </div>
           </div>
         </div>
@@ -872,16 +869,16 @@
         data-step="3"
       >
         <h2 class="gifts__title" style="margin-top: 20px; text-align: center">
-          Wipe off the protective layer and receive your reward!
+          حفاظتی پرت کا صفایا کریں اور اپنے اجر کو وصول کریں
         </h2>
         <h2
           class="gifts__title hide gifts__title-result"
           style="margin-top: 20px; text-align: center"
         >
-          Congratulations!<br />You win!
+        !مبارک ہو<br />!تم جیت 
         </h2>
         <p class="attempt">
-          Remaining attempts:<span class="attempt__num">3</span>
+          :باقی کوششیں<span class="attempt__num">3</span>
         </p>
         <div class="gifts">
           <div class="gift">
@@ -929,7 +926,7 @@
               <td align="left" valign="top" class="commentpad">
                 <div class="name">Fan Leriz</div>
                 <div class="text">
-                  Today, I have my ₦100,000. Thank you very much for this gift!
+                  !آج ، میرے پاس 100000 روپے ہیں۔ اس تحفے کے لئے آپ کا بہت بہت شکریہ
                 </div>
                 <img src="images/cash.png" alt="" class="fbimg" />
                 <div class="qqq">
@@ -964,7 +961,7 @@
               <td align="left" valign="top" class="commentpad">
                 <div class="name">Jasmine Yang Cuishan</div>
                 <div class="text">
-                  My wife and I have ₦300,000 for negotiation. Thank you.
+                  میری اہلیہ اور میرے پاس مذاکرات کے لئے 300000 روپے ہیں۔ آپ کا شکری.
                 </div>
                 <div class="qqq">
                   <div class="kkk">
@@ -991,7 +988,7 @@
               <td align="left" valign="top" class="commentpad">
                 <div class="name">Delia Kang</div>
                 <div class="text">
-                  Who gives you such gifts? I don't believe it!
+                  !آپ کو ایسے تحائف کون دیتا ہے؟ مجھے یقین نہیں ہے
                 </div>
                 <div class="qqq">
                   <div class="kkk">
@@ -1045,8 +1042,9 @@
               <td align="left" valign="top" class="commentpad">
                 <div class="name">Teddy Yap</div>
                 <div class="text">
-                  I just received a call - He said he'll send me a bonus... I
-                  won't believe it until I receive it. :)
+                  ...میں نے ابھی ایک کال موصول ہوئی - انہوں نے کہا کہ وہ مجھے ایک بونس بھیجیں گے 
+                                                                                                  میں                     
+                                          .جب تک میں اسے حاصل نہیں کروں گا اس پر یقین نہیں کروں گا 
                 </div>
                 <div class="qqq">
                   <div class="kkk">
