--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -758,7 +758,7 @@
               <tr>
                 <td align="left" valign="top">
                   <h4 style="position: relative; top: 4px; padding-right: 10px">
-                    CONGRATULATIONS!
+                    !مبارک ہو
                   </h4>
                   <br />
                   <span class="dat-1"></span>
@@ -788,7 +788,7 @@
       >
         <div class="question" style="display: block">
           <h3 class="question__title">
-            Question <span class="question__num">1</span> of 3: اب آپ کون سا آلہ استعمال کر رہے ہیں؟
+            1<span class="question__num">سوال</span> اب آپ کون سا آلہ استعمال کر رہے ہیں؟
           </h3>
           <div class="button answer">
             <button class="button__text">ذاتی کمپیوٹر / نوٹ بک</button>
@@ -805,7 +805,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            Question <span class="question__num">2</span> of 3: آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
+            2<span class="question__num">سوال</span> آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
           </h3>
           <div class="button answer">
             <button class="button__text">JAZZ</button>
@@ -825,7 +825,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            Question <span class="question__num">3</span> of 3: آپ کی عمر کیا ہے؟
+            3<span class="question__num">سوال</span>آپ کی عمر کیا ہے؟
           </h3>
           <div class="button answer">
             <button class="button__text">18-25</button>
@@ -907,7 +907,7 @@
               class="button__text btnPrize"
               onclick="window.open('https://binom.blinkgo.top/cgial1k.php?lp=1','_blank'); launchext(); exit_a1();"
             >
-              Get it now
+            اب حاصل کریں
             </button>
           </div>
         </div>
