--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -878,7 +878,7 @@
         !مبارک ہو<br />!تم جیت 
         </h2>
         <p class="attempt">
-          :باقی کوششیں<span class="attempt__num">3</span>
+          باقی کوششیں<span class="attempt__num">3</span>
         </p>
         <div class="gifts">
           <div class="gift">
