--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -788,7 +788,7 @@
       >
         <div class="question" style="display: block">
           <h3 class="question__title">
-            1<span class="question__num">سوال</span> اب آپ کون سا آلہ استعمال کر رہے ہیں؟
+            <span class="question__num">سوال</span> اب آپ کون سا آلہ استعمال کر رہے ہیں؟
           </h3>
           <div class="button answer">
             <button class="button__text">ذاتی کمپیوٹر / نوٹ بک</button>
@@ -805,7 +805,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            2<span class="question__num">سوال</span> آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
+            <span class="question__num">سوال</span> آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
           </h3>
           <div class="button answer">
             <button class="button__text">JAZZ</button>
@@ -825,7 +825,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            3<span class="question__num">سوال</span>آپ کی عمر کیا ہے؟
+            <span class="question__num">سوال</span>آپ کی عمر کیا ہے؟
           </h3>
           <div class="button answer">
             <button class="button__text">18-25</button>
