--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -768,8 +768,9 @@
           </table>
           <div style="border-bottom: 1px solid #ebebeb">
             <p class="wrapper" style="font-size: 16px">
-              آپ جیت سکتے ہیں<span class="marked">Rs.100,000</span> ہمارے ساتھی سے
-              <span class="marked">"Jazzcash"</span>.     آپ سب کی ضرورت ہے
+                            آپ جیت سکتے ہیں<span class="marked"> Rs.100,000 </span> 
+                                                            ہمارے ساتھی سے
+              <span class="marked"> Jazzcash </span>.     آپ سب کی ضرورت ہے
               یہ تحفہ حاصل کرنے کے ل do ان 3 سوالوں کا جواب ہے۔ یہ تحقیق
               ہمیں اپنے صارفین کو بہتر طور پر سمجھنے اور اپنی مصنوعات کو بہتر بنانے کی اجازت دیتا ہے.
               .یہ آپ کے وقت کے 30 سیکنڈ سے بھی کم وقت لگے گا<br /><br />
