--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -777,7 +777,7 @@
             </p>
           </div>
           <div class="wrapper select2" style="font-size: 16px; color: #000">
-            <b>:یاد رکھیں</b>,صرف 10 تصادفی طور پر منتخب صارفین اس دعوت نامہ وصول کرتے ہیں،
+            <b> یاد رکھیں</b>,صرف 10 تصادفی طور پر منتخب صارفین اس دعوت نامہ وصول کرتے ہیں،
             .تحائف کی تعداد محدود ہے.
           </div>
         </div>
