--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -777,7 +777,7 @@
             </p>
           </div>
           <div class="wrapper select2" style="font-size: 16px; color: #000">
-            <b> یاد رکھیں</b>,صرف 10 تصادفی طور پر منتخب صارفین اس دعوت نامہ وصول کرتے ہیں،
+            <b>یاد رکھیں</b>,صرف 10 تصادفی طور پر منتخب صارفین اس دعوت نامہ وصول کرتے ہیں،
             .تحائف کی تعداد محدود ہے.
           </div>
         </div>
@@ -789,7 +789,7 @@
       >
         <div class="question" style="display: block">
           <h3 class="question__title">
-            <span class="question__num">سوال</span> اب آپ کون سا آلہ استعمال کر رہے ہیں؟
+            <span class="question__num">سوال</span> ب آپ کون سا آلہ استعمال کر رہے ہیں
           </h3>
           <div class="button answer">
             <button class="button__text">ذاتی کمپیوٹر / نوٹ بک</button>
@@ -806,7 +806,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            <span class="question__num">سوال</span> آپ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں؟
+            <span class="question__num">سوال</span> پ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں
           </h3>
           <div class="button answer">
             <button class="button__text">JAZZ</button>
@@ -826,7 +826,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            <span class="question__num">سوال</span>آپ کی عمر کیا ہے؟
+            <span class="question__num">سوال</span>پ کی عمر کیا ہے
           </h3>
           <div class="button answer">
             <button class="button__text">18-25</button>
