--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -789,7 +789,7 @@
       >
         <div class="question" style="display: block">
           <h3 class="question__title">
-            <span class="question__num">سوال</span> ب آپ کون سا آلہ استعمال کر رہے ہیں
+            <span class="question__num"></span> ب آپ کون سا آلہ استعمال کر رہے ہیں
           </h3>
           <div class="button answer">
             <button class="button__text">ذاتی کمپیوٹر / نوٹ بک</button>
@@ -806,7 +806,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            <span class="question__num">سوال</span> پ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں
+            <span class="question__num"></span> پ کون سے دوسرے انٹرنیٹ فراہم کرنے والے باقاعدگی سے استعمال کرتے ہیں
           </h3>
           <div class="button answer">
             <button class="button__text">JAZZ</button>
@@ -826,7 +826,7 @@
         </div>
         <div class="question">
           <h3 class="question__title">
-            <span class="question__num">سوال</span>پ کی عمر کیا ہے
+            <span class="question__num"></span>عمر کیا ہے
           </h3>
           <div class="button answer">
             <button class="button__text">18-25</button>
