--- a/survey/surveyen/jazzcash.html
+++ b/survey/surveyen/jazzcash.html
@@ -929,7 +929,7 @@
                 <div class="text">
                   !آج ، میرے پاس 100000 روپے ہیں۔ اس تحفے کے لئے آپ کا بہت بہت شکریہ
                 </div>
-                <img src="images/cash.png" alt="" class="fbimg" />
+                <img src="images/RS.png" alt="" class="fbimg" />
                 <div class="qqq">
                   <div class="kkk">
                     <div class="date dateTime0"></div>
@@ -1014,7 +1014,7 @@
                 <div class="text">
                   I win money <span class="prizeUser2"></span> yesterday...
                 </div>
-                <img src="images/userPrize2.jpg" alt="" class="fbimg" />
+                <img src="images/RS1.jpg" alt="" class="fbimg" />
                 <div class="qqq">
                   <div class="kkk">
                     <div class="date dateTime3"></div>
